--- a/www/css/poole.css
+++ b/www/css/poole.css
@@ -147,12 +147,12 @@ abbr[title] {
 /* Code */
 code,
 pre {
-  font-family: Menlo, Monaco, "Courier New", monospace;
+  font-family: "Roboto Mono", Menlo, Monaco, "Courier New", monospace;
 }
 code {
   padding: .25em .5em;
   font-size: 85%;
-  color: #bf616a;
+  color: #7272ca;
   background-color: #f9f9f9;
   border-radius: 3px;
 }
