--- a/themes/hyde/layouts/partials/sidebar.html
+++ b/themes/hyde/layouts/partials/sidebar.html
@@ -24,6 +24,6 @@
     {{ with .Site.Params.github }}<a href="{{.}}"><i class="fa fa-github-square"></i></a>&nbsp;&nbsp;{{end}}
     <a href="{{ .RSSLink }}" type="application/rss+xml"><i class="fa fa-rss-square"></i></a>&nbsp;&nbsp;
 
-    <p>{{ with .Site.Params.copyright }}{{.}}{{ else }}&copy; {{.Now.Format "2006"}}. All rights reserved. {{end}}</p>
+    <p>{{ with .Site.Params.copyright }}{{.}}{{ else }}&copy; {{now.Format "2006"}}. All rights reserved. {{end}}</p>
   </div>
 </div>
